# rlnc_poc

./: .gitignore  Cargo.toml
benches/: block_benchmarks.rs
rlnc-go/: go.mod  libpath_darwin.go  rlnc.go  rlnc_test.go
src/: blocks.rs  c_api.rs  lib.rs  matrix.rs  node.rs
