[lib]
name = "rlnc_poc"
crate-type = ["cdylib", "rlib"] # Both C dynamic library and Rust library

[package]
name = "rlnc_poc"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = { version = "4.0.0", features = ["serde"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sha2 = "0.10"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "block_benchmarks"
harness = false

[[bin]]
name = "random_topology"
path = "src/bin/random_topology_rlnc.rs"

[[bin]]
name = "routing"
path = "src/bin/routing.rs"
